--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "mayachain",
     "dash",
     "kujira",
-    "arb"
+    "arb",
+    "radix",
+
   ],
   "homepage": "https://thorchain.org",
   "dependencies": {
@@ -106,6 +108,7 @@
     "@xchainjs/xchain-mayanode": "0.1.6",
     "@xchainjs/xchain-midgard": "0.5.7",
     "@xchainjs/xchain-midgard-query": "0.1.18",
+    "@xchainjs/xchain-radix": "0.1.1",
     "@xchainjs/xchain-thorchain": "1.1.0",
     "@xchainjs/xchain-thorchain-query": "0.7.13",
     "@xchainjs/xchain-thornode": "0.3.15",
